# MultiTaskDet

./: CMakeLists.txt  README.md  run_test.sh
common/: logger.cpp  logging.h
config/: MultiTaskDet.yaml
include/: inference.h  inference_api.h  params.h
model/: trtexec_yolop.md
modules_export/MultiTaskDet/include/: decode.h  inference.h  inference_api.h  preprocess_cu.h
src/: decode.cpp  inference.cpp  inference_api.cpp  preprocess_cu.cu
test/: test.cpp
